modules/ballerina-core/src/test/resources/samples/parser/invalidSemantic/IncompatibleTypeComparison.bal
package samples.parser.invalidSemantic;

function main(string[] s) {
	int i;
	float f;
	
	i = 10;
	f = 10.0;
	
	// Following line is invalid.
	if (i == f) {
		
	}
	
	reply m;
}
